2006-10-15  Wouter Bolsterlee  <wbolster@gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:
	Implement EphyPasswordManagerIface.add to add stored
	passwords. Fixes bug #361606, patch by John Millikin.

2006-10-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/Makefile.am:
	* lib/Makefile.am:
	* lib/egg/Makefile.am:
	* src/Makefile.am:
	* src/bookmarks/Makefile.am:

	Fix a bug in the last commit.

2006-10-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/Makefile.am:
	* lib/Makefile.am:
	* lib/egg/Makefile.am:
	* src/Makefile.am:
	* src/bookmarks/Makefile.am:

	Make the enum/flags values not global.

2006-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/AutoWindowModalState.cpp:

	Revert part of the last change, we don't need the top window here.

2006-10-06  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/AutoWindowModalState.cpp:

	Use the top DOM window here, and adapt to gecko 1.8.1.

2006-10-05  Christian Persch  <chpe@cvs.gnome.org>
	
	* embed/mozilla/GeckoSpellCheckEngine.cpp:

	Fix build with gecko 1.8.1.

2006-10-02  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-history-window.c: (confirmation_dialog_construct),
	(ephy_history_window_construct):

	Add a window group for the history window.

2006-10-01  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_load),
	(ephy_spinner_cache_get_images), (bump_spinner_frame_cb):
	* lib/widgets/testspinner.c: (add_spinner), (main):

	Fix compile warnings.

2006-09-29  Christian Persch  <chpe@cvs.gnome.org>

	R embed/mozilla/AutoEventQueue.cpp:
	R embed/mozilla/AutoEventQueue.h:
	
	Remove unused code.

2006-09-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/widgets/ephy-spinner.c: (ephy_spinner_images_ref),
	(ephy_spinner_images_unref), (ephy_spinner_cache_data_unload),
	(ephy_spinner_images_load), (ephy_spinner_cache_get_images),
	(ephy_spinner_load_images), (ephy_spinner_unload_images),
	(ephy_spinner_init), (ephy_spinner_expose),