@@ -1272,7 +1272,10 @@ update_has_smart_address (EphyBookmarks *bookmarks, EphyNode *bmk, const char *a
 	 */
 	if (smart && with_options)
 	{
-		ephy_node_remove_child (smart_bmks, bmk);
+		if (ephy_node_has_child (smart_bmks, bmk))
+		{
+			ephy_node_remove_child (smart_bmks, bmk);
+		}
 		ephy_node_add_child (smart_bmks, bmk);
 	}
 	else if (smart)
